force-app/main/default/objects/Ordonnance__c.object
<CustomObject>
    <fields>
        <fullName>Date_Visite__c</fullName>
        <formula>Visite__r.Date_Visite__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Visite</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Duree__c</fullName>
        <inlineHelpText>TEXT: Nombre de jours ou de semaines</inlineHelpText>
        <label>Durée</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matin__c</fullName>
        <label>Matin</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Med_Midi__c</fullName>
        <formula>Medicament__r.Midi__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Med Midi</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Medicament__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Medicament</label>
        <referenceTo>Medicament__c</referenceTo>
        <relationshipLabel>Ordonnances</relationshipLabel>
        <relationshipName>Ordonnances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Midi__c</fullName>
        <label>Midi</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prise__c</fullName>
        <label>Prise</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Avant repas</fullName>
                </value>
                <value>
                    <fullName>Pendant repas</fullName>
                </value>
                <value>
                    <fullName>Apres repas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Soir__c</fullName>
        <label>Soir</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Specialite__c</fullName>
        <formula>TEXT(Visite__r.Medecin__r.Specialite__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Specialite</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visite__c</fullName>
        <label>Visite</label>
        <referenceTo>Visite__c</referenceTo>
        <relationshipLabel>Ordonnances</relationshipLabel>
        <relationshipName>Ordonnances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Ordonnance</label>
    <nameField>
        <displayFormat>Med-{0000}</displayFormat>
        <label>Ordonnance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ordonnances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>